--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
                     <p>Select password length</p>
                     <p class="length-rec">Between 6 and 15 characters</p>
                 </div>    
-                <div>
-                    <label for="passW-length">Password Length:</label>
-                    <input type="range" id="passW-length" min="6" max="15" value="10" oninput="updateLengthDisplay(this.value)">
-                    <span id="length-display">10</span> characters
+                <div id="length-selector">
+                    <!-- <label for="passW-length">Password Length:</label> -->
+                    <input type="range" id="passW-length" min="6" max="15" value="10" class="slider-length" oninput="updateLengthDisplay(this.value)">
+                    <div>   
+                        <span id="length-display">10</span> characters
+                    </div>
                 </div>
             </div>
             <div id="toggle-section">
